In FFmpeg SVN r22715 (I suppose), there was an optimization done to speed up VLC table (whatever it is) initialization. Somehow the code does not work on GCC2. Use the old code we had previously in SVN minus a flag (INIT_VLC_USE_STATIC) which is no longer used in FFmpeg. This fixes the GCC2 build of FFmpeg and closes Ã#6643, #6582 and #656.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@38746 a95241bf-73f2-0310-859d-f6bbb57e9c96